[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/Graphics/Characters/Boshy/forsen_boshy.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Characters/MainCharacters/Boshy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 28 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 1 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24, 28 )

[node name="Boshy" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -32 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -28 )
shape = SubResource( 1 )

[node name="GunPosition" type="Position2D" parent="."]
position = Vector2( 32, -30 )
__meta__ = {
"_gizmo_extents_": 2.0
}

[node name="FloorDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloorDetector"]
modulate = Color( 0.0235294, 0.0196078, 0.505882, 1 )
shape = SubResource( 2 )

[node name="RoofDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoofDetector"]
modulate = Color( 0.603922, 0.909804, 0, 1 )
position = Vector2( 0, -56 )
shape = SubResource( 3 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
modulate = Color( 0.803922, 0.0431373, 0.258824, 1 )
position = Vector2( 0, -28 )
shape = SubResource( 4 )

[connection signal="body_entered" from="FloorDetector" to="." method="_on_FloorDetector_body_entered"]
[connection signal="body_exited" from="FloorDetector" to="." method="_on_FloorDetector_body_exited"]
[connection signal="body_entered" from="RoofDetector" to="." method="_on_RoofDetector_body_entered"]
[connection signal="body_exited" from="RoofDetector" to="." method="_on_RoofDetector_body_exited"]
